--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,7 +1,44 @@
-FROM golang:1.21-alpine
+# Multi-stage build for smaller, more secure images
+FROM golang:1.21-alpine AS builder
+
+# Install ca-certificates for SSL/TLS connections
+RUN apk add --no-cache ca-certificates git
+
 WORKDIR /app
-COPY ./backend /app
-RUN apk add --no-cache git
-RUN go build -o /bin/server ./cmd/server
-EXPOSE 8080
-CMD ["/bin/server"]
+
+# Copy go mod files first for better caching
+COPY backend/go.mod backend/go.sum ./
+RUN go mod download
+
+# Copy source code
+COPY backend/ .
+
+# Build the application
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o server ./cmd/server
+
+# Production stage
+FROM alpine:latest AS production
+
+# Install ca-certificates for SSL/TLS
+RUN apk --no-cache add ca-certificates tzdata
+
+WORKDIR /root/
+
+# Create non-root user for security
+RUN addgroup -g 1001 -S appgroup && \
+    adduser -u 1001 -S appuser -G appgroup
+
+# Copy binary from builder stage
+COPY --from=builder /app/server .
+
+# Change ownership to non-root user
+RUN chown appuser:appgroup server && chmod +x server
+
+# Switch to non-root user
+USER appuser
+
+# Cloud Run provides PORT environment variable
+ENV PORT=8080
+EXPOSE $PORT
+
+CMD ["./server"]
