--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
-# Build artifacts
-/backend/server
-/backend/cmd/server/server
+# Build artifacts that should be rebuilt in container
+# (commenting out server binaries as they get built inside container)
+# /backend/server
+# /backend/cmd/server/server
 
 # Go build cache
 .cache/
